<resources>
    <string name="app_name">ABUAD IT</string>
    <string name="title_activity_home_screen">ABUAD IT</string>
    <string name="profile">PROFILE</string>
    <string name="company">COMPANIES</string>
    <string name="itfoffice">IT OFFICE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abdulraheem Sherif Adavuruku</string>
    <string name="nav_header_subtitle">aabdulraheemsherif@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_markattendance">Mark Attendance</string>

    <string name="menu_home">Home</string>
    <string name="load">Loading...</string>
    <string name="menu_appstatus">Application Status</string>
    <string name="menu_register">My Register</string>
    <string name="menu_notice">Notice</string>
    <string name="subtitle">ABUAD IT MOBILE PLATFORM</string>
    <string name="menu_about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_website">Visit WebSite</string>
</resources>
