<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/appstatus"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_appstatus" />
        <item
            android:id="@+id/register"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/notice"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_notice" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/close"
            android:title="Sign Out"
            android:orderInCategory="300"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>
